# summary-story

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  app.py  crawl_history.json  docker-compose.yml  docker-run.sh  main.py  nginx.conf  pyproject.toml  run.sh  setup.py
scripts/: crawl.sh  summarize.sh
src/agent/: prompt.py  trackapi.py  workflow.py
src/crawl/: crawling.py
story/Cẩu Tại Sơ Thánh Ma Môn Làm Nhân Tài/: 001_Chương 1  Bách Thế Thư.txt  002_Chương 2  Thuận thiên dễ, nghịch thiên khó.txt  003_Chương 3  Ma môn tác phong.txt  004_Chương 4  Khó lòng phòng bị.txt  005_Chương 5  Thù này ta nhớ kỹ.txt  006_Chương 6  Ma môn phương thức tu luyện.txt  007_Chương 7  Thần Tiêu Ngự Kiếm Chân Quyết.txt  008_Chương 8  Trâu ngựa tu tiên truyền.txt  009_Chương 9  Tiền tài động nhân tâm.txt  010_Chương 10  Đêm không trăng đêm giết người.txt  011_Chương 11  Sát Sinh Chú.txt  012_Chương 12  Công đức cá độ, Thế Tử Âm Khôi.txt  013_Chương 13  Bọ ngựa bắt ve, chim sẻ núp đằng sau.txt  014_Chương 14  Đen ăn đen!.txt  015_Chương 15  Câu cá.txt  016_Chương 16  Điên cuồng bọt biển.txt  017_Chương 17  Người khác sợ hãi ta mua thêm.txt  018_Chương 18  Hack chính xác cách dùng.txt  019_Chương 19  Lột da.txt  020_Chương 20  Tiêu Thạch Diệp.txt  021_Chương 21  Tai bay vạ gió.txt  022_Chương 22  Thần quang chi uy.txt  023_Chương 23  Tiên Thiên Nhất Khí Vạn Linh Phiên.txt  024_Chương 24  Tự bạo!.txt  025_Chương 25  Hồng Vận kinh hồn.txt  026_Chương 26  Không hổ là Thánh Tông.txt  (+74 more)
story/horror/: 1.txt  (+5 more)
summary/: Cẩu Tại Sơ Thánh Ma Môn Làm Nhân Tài_summary.txt
